tests/NormalTests/paczka1/small_fuzzy/57535815.err
Error in line 4: E81Fv S167 37,4
Error in line 6: MktGJL S942 35,3
Error in line 7: MktGJL S167 3,3
Error in line 10: mJURkZNTX S942 75,9
Error in line 12: mJURkZNTX S167 33,8
